<resources>
    <string name="app_name">BLUNCH</string>
    <string name="action_settings">Settings</string>
    <!-- Activity Collaborative menu Answer Strings-->
    <string name="title_activity_collaborative_menu_answer">CollaborativeMenuAnswerActivity</string>
    <string name="collaborative_menu_answer_host_suggest">El anfitrión sugiere:</string>
    <string name="collaborative_menu_answer_guest_suggest">Quieres sugerir una cosa diferente?</string>
    <string name="collaborative_menu_answer_Et_hint">Inserta tu propuesta aquí</string>
    <string name="collaborative_menu_answer_Btn_add">Añadir</string>

    <string name="title_activity_new_colaborative_menu">NewColaborativeMenu</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="getMenuCollaborativeActivity_name">getMenuCollaborativeActivity_name</string>
    <string name="title_proposal_list">Answers menu</string>
    <string name="check_descript">Accept proposal</string>
    <string name="close_descript">Reject proposal</string>
    <string name="title_activity_list_menu">ListMenuActivity</string>
    <string name="title_activity_list_menus">Blunch</string>
    <string name="getPaymentMenuActivity_name">Menu pagament</string>
    <string-array name="menu_types">
        <item>Todos</item>
        <item>Colaborativo</item>
        <item>De pago</item>
    </string-array>
    <string-array name="menu_score">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="my_menu_types">
        <item>Todos mis menús</item>
        <item>Mis menús antiguos</item>
        <item>Mis menús activos</item>
    </string-array>
    <string-array name="collaborative_menu_types">
        <item>Menús con mi participación</item>
        <item>Participación en menús colaborativos</item>
        <item>Participación en menús de pago</item>
    </string-array>
    <string-array name="old_menu_types">
        <item>No valorados</item>
        <item>Valorados</item>
        <item>Todos los menús</item>
    </string-array>
    <string-array name="Valoration">
        <item>0</item>
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_payment_petitions_list">PaymentPetitionsListActivity</string>
    <string name="title_activity_new_collaborative_menu_reviewed">NewCollaborativeMenuReviewed
    </string>
    <string name="title_activity_new_collaborative_menu_activity_reviewed">
        NewCollaborativeMenuActivityReviewed
    </string>
    <string name="title_activity_new_payment_menu_activity_reviewed">
        NewPaymentMenuActivityReviewed
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mis_menus">Mis menús</string>
    <string name="buscar_menus">Buscar</string>
    <string name="mapa_menus">Mapa</string>
    <string name="menus_participo">Menús en los que participo</string>
    <string name="menus_por_valoracion">Menús filtrados por nota</string>
    <string name="valoracion_menus">Valoración</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="valorationTitle">Valoración</string>
    <string name="firstTextValoration">Valore al usuario</string>
    <string name="addValorationComment">Añade un comentario:</string>
    <string name="valoration_text_Et_hint">Escriba el comentario aquí</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="logout">Log out</string>
    <string name="facebook_app_id">1004661026291848</string>
    <string name="title_activity_menus_location">Map</string>
    <string name="action_accept_proposals">Revisar propuestas</string>
    <string name="action_payment_petitions">Peticions de pago</string>
    <string name="write_something">Escribe algo...</string>
    <string name="send">Enviar</string>
    <string name="exampleValueCount">(0 valoraciones)</string>
    <string name="location_request_title">Habilitar geolocalizacion</string>
    <string name="location_request_message">Para ver tu localización en el mapa debes habilitar el GPS en tu telefono. Deseas continuar?</string>
    <string name="answer_menu">Responder menu</string>
    <string name="title_activity_get_user">getUserActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_list_menus_by_user">ListMenusByUserActivity</string>
</resources>
