<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/CollaborativeMenuAnswerLayout"
android:windowSoftInputMode="adjustResize"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:context=".activity.NewCollaborativeMenuActivity">

<android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay"
    android:id="@+id/toolbar">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valorationTitle"
            android:gravity="left"
            android:textSize="24dp"
            android:textStyle="bold"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:src="@drawable/check"
            android:tint="@color/white"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:id="@+id/valorationDone"
            android:layout_gravity="right"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"/>

    </android.support.v7.widget.Toolbar>

</android.support.design.widget.AppBarLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:baselineAligned="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstTextValoration"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            android:layout_gravity="bottom" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_gravity="center"
            android:progressTint="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addValorationComment"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/valorationComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:layout_toStartOf="@+id/CollaborativeMenuAnswerBtn"
                android:hint="@string/valoration_text_Et_hint"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>


</RelativeLayout>