<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/CollaborativeMenuAnswerLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.NewCollaborativeMenuActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/toolbar">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sugerencias"
                android:gravity="left"
                android:textSize="24dp"
                android:textStyle="bold"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collaborative_menu_answer_host_suggest"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30sp"
                android:textSize="20sp"
                android:layout_gravity="bottom" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:id="@+id/CollaborativeMenuAnswerHostSuggestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:orientation="vertical">
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collaborative_menu_answer_guest_suggest"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:textSize="20sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/CollaborativeMenuAnswerEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:layout_toStartOf="@+id/CollaborativeMenuAnswerBtn"
                    android:hint="@string/collaborative_menu_answer_Et_hint"/>

                <Button
                    android:id="@+id/CollaborativeMenuAnswerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/collaborative_menu_answer_Btn_add"
                    android:onClick="addSuggestion"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/background"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/CollaborativeMenuAnswerGuestSuggestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:orientation="vertical">
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/CollaborativeMenuAnswerBtnEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"/>

</RelativeLayout>